; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/gp2x/extr_soc_pollux.c_unset_ram_timings.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/gp2x/extr_soc_pollux.c_unset_ram_timings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@saved_memtimex = common dso_local global i32* null, align 8
@memregs = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [38 x i8] c"RAM timings reset to startup values.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @unset_ram_timings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unset_ram_timings() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @saved_memtimex, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 0
  %4 = load i32, i32* %3, align 4
  %5 = load i32*, i32** @memregs, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 41985
  store i32 %4, i32* %6, align 4
  %7 = load i32*, i32** @saved_memtimex, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, 32768
  %11 = load i32*, i32** @memregs, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 41986
  store i32 %10, i32* %12, align 4
  store i32 0, i32* %1, align 4
  br label %13

13:                                               ; preds = %24, %0
  %14 = load i32, i32* %1, align 4
  %15 = icmp slt i32 %14, 1048576
  br i1 %15, label %16, label %27

16:                                               ; preds = %13
  %17 = load i32*, i32** @memregs, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 41986
  %19 = load i32, i32* %18, align 4
  %20 = and i32 %19, 32768
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %16
  br label %27

23:                                               ; preds = %16
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %1, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %1, align 4
  br label %13

27:                                               ; preds = %22, %13
  %28 = call i32 @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
